--- a/config.yml
+++ b/config.yml
@@ -164,7 +164,7 @@ colophon: true
 # advfile: null
 
 # 取り込む画像が格納されているディレクトリ。省略した場合は以下
-# imagedir: images
+imagedir: images
 
 # 取り込むフォントが格納されているディレクトリ。省略した場合は以下
 # fontdir: fonts
