--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -70,6 +70,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gems.
         run: bundle install
+      - name: Download PlantUML
+        run: curl -sL https://sourceforge.net/projects/plantuml/files/plantuml.jar
       - name: convert PlantUML
         run: pwd | bash ./plantuml.sh >> .plantuml.log
       - name: Show .plantuml.log
@@ -100,6 +102,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gems.
         run: bundle install
+      - name: Download PlantUML
+        run: curl -sL https://sourceforge.net/projects/plantuml/files/plantuml.jar
       - name: convert PlantUML
         run: pwd | bash ./plantuml.sh >> .plantuml.log
       - name: Show .plantuml.log
