--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -104,6 +104,8 @@ jobs:
         run: bundle install
       - name: Download PlantUML
         run: curl -sL https://sourceforge.net/projects/plantuml/files/plantuml.jar
+      - name: Check tools
+        run: dot -v && blockdiag --version && java -jar plantuml.jar -version
       - name: convert PlantUML
         run: pwd | bash ./plantuml.sh >> .plantuml.log
       - name: Show .plantuml.log
