--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Download PlantUML
         run: curl -sL https://sourceforge.net/projects/plantuml/files/plantuml.jar
       - name: Check tools
-        run: dot -v && blockdiag --version && java -jar plantuml.jar -version
+        run: dot -V && blockdiag --version && java -jar plantuml.jar -version
       - name: convert PlantUML
         run: pwd | bash ./plantuml.sh >> .plantuml.log
       - name: Show .plantuml.log
