--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -70,10 +70,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gems.
         run: bundle install
-      - name: add Path.
-        run: echo "/java" >> $GITHUB_PATH
+      - name: Copy plantuml.
+        run: pwd | cp /java/plantuml.jar
       - name: Check tools
-        run: dot -V && blockdiag --version && java -jar /java/plantuml.jar -version
+        run: dot -V && blockdiag --version && java -jar plantuml.jar -version
       - name: convert PlantUML
         run: pwd | bash ./plantuml.sh >> .plantuml.log
       - name: Show .plantuml.log
@@ -104,10 +104,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install gems.
         run: bundle install
-      - name: add Path.
-        run: echo "/java" >> $GITHUB_PATH
+      - name: Copy plantuml.
+        run: pwd | cp /java/plantuml.jar
       - name: Check tools
-        run: dot -V && blockdiag --version && java -jar /java/plantuml.jar -version
+        run: dot -V && blockdiag --version && java -jar plantuml.jar -version
       - name: convert PlantUML
         run: pwd | bash ./plantuml.sh >> .plantuml.log
       - name: Show .plantuml.log
