Re:VIEWの最新masterで採用されている変更を取り込む

--- a/config.yml
+++ b/config.yml
@@ -77,7 +77,7 @@ date: 2021-10-01
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
 history: [["2018-08-11"], ["2018-11-11"], ["2019-12-30"], ["2021-10-01"]]
 # 権利表記(配列で複数指定可)
-rights: ©２０１８ー２０２１　恢徳堂
+rights: ©2018−2021　恢徳堂
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
