--- a/locale.yml
+++ b/locale.yml
@@ -20,7 +20,7 @@ ja:
   memo_head: ■メモ
   format_number: "%s．%pJ"
   format_number_header: "%s．%pJ:"
-  format_number_without_chapter: "%pJ"
+  format_number_without_chapter: "%pJ:"
   format_number_header_without_chapter: "%pJ:"
   image_quote: "「%s」"
   caption_prefix: " "
