--- a/config.yml
+++ b/config.yml
@@ -22,8 +22,8 @@ language: ja
 
 # 書名
 # 読みを入れる例 booktitle: {name: "Re:VIEW EPUBサンプル", file-as: "リビューイーパブサンプル"}
-booktitle: "現代焚書 第３号"
-subtitle: "同人評論総集編"
+booktitle: "現代焚書　総集編１"
+subtitle: "２０２１年までのヨーシャの軌跡"
 
 # 著者名。「, 」で区切って複数指定できる
 # 読みを入れる例 aut: [{name: "青木峰郎", file-as: "アオキミネロウ"}, {name: "武藤健志", file-as: "ムトウケンシ"}, {name: "高橋征義", file-as: "タカハシマサヨシ"}, {name: "角征典", file-as: "カドマサノリ"}]
@@ -70,14 +70,14 @@ prt: ねこのしっぽ
 contact: "ヨーシャ(iosha@huideyeren.info)"
 
 # 刊行日(省略した場合は実行時の日付)
-date: 2021-10-01
+date: 2022-01-10
 # 発行年月。YYYY-MM-DD形式による配列指定。省略した場合はdateを使用する
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2018-08-11"], ["2018-11-11"], ["2019-12-30"], ["2021-10-01"]]
+history: [["2022-01-10"]]
 # 権利表記(配列で複数指定可)
-rights: ©2018−2021　恢徳堂
+rights: ©2018−2022　恢徳堂
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
