--- a/config.yml
+++ b/config.yml
@@ -344,7 +344,7 @@ epubmaker:
   # cover_linear: null
   #
   # @<href>タグでの外部リンクを禁止し、地の文にする(falseで禁止する)
-  # externallink: true
+  externallink: true
   #
   # 脚注に「戻る」リンクを追加する(trueで追加)。脚注の記号および戻るリンクの記号はlocale.ymlで変更可能
   # back_footnote: null
