--- a/config.yml
+++ b/config.yml
@@ -59,7 +59,7 @@ aut: ["ヨーシャ"]
 # a-pbl, pbl: 出版社（発行所）
 a-pbl: 恢徳堂
 # a-prt, prt: 印刷所
-prt: ねこのしっぽ
+# prt: ねこのしっぽ
 # a-red, red: 項目の枠組起草者
 # a-rev, rev: 評論者
 # a-spn, spn: 援助者
@@ -70,12 +70,12 @@ prt: ねこのしっぽ
 contact: "ヨーシャ(iosha@huideyeren.info)"
 
 # 刊行日(省略した場合は実行時の日付)
-date: 2022-01-10
+date: 2022-01-15
 # 発行年月。YYYY-MM-DD形式による配列指定。省略した場合はdateを使用する
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2022-01-10"]]
+history: [["2022-01-15"]]
 # 権利表記(配列で複数指定可)
 rights: ©2018−2022　恢徳堂
 # description: 説明
@@ -386,7 +386,7 @@ pdfmaker:
   # TeX版で利用する表紙画像。
   # 仕上がりサイズ+塗り足し3mmありのPDFまたはIllustratorファイル（PDF互換オプション付き）を推奨。
   # 拡縮はされず「そのまま」貼り付けられる
-  coverimage: cover.png
+  coverimage: cover.pdf
   #
   # TeXコンパイル前に実行するプログラム。変換後のTeXソースを調整したいときに使用する。
   # 渡される引数1=作業用展開ディレクトリ、引数2=呼び出しを実行したディレクトリ
