--- a/config.yml
+++ b/config.yml
@@ -384,10 +384,11 @@ dvioptions: "-d 5 -z 9 -r 600"
 #
 pdfmaker:
   #
+  cover: cover.tex
   # TeX版で利用する表紙画像。
   # 仕上がりサイズ+塗り足し3mmありのPDFまたはIllustratorファイル（PDF互換オプション付き）を推奨。
   # 拡縮はされず「そのまま」貼り付けられる
-  coverimage: cover.pdf
+  # coverimage: cover.pdf
   #
   # TeXコンパイル前に実行するプログラム。変換後のTeXソースを調整したいときに使用する。
   # 渡される引数1=作業用展開ディレクトリ、引数2=呼び出しを実行したディレクトリ
